-finish all TODO in Exc .01

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
@@ -24,5 +25,11 @@ dependencies {
     compile 'com.android.support:support-annotations:25.1.0'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 
-    // TODO (4) Add the required Espresso UI Testing dependencies
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+}
+repositories {
+    mavenCentral()
 }
